--- a/src/mockup.html
+++ b/src/mockup.html
@@ -1,8 +1,4 @@
-<table>
-  <tbody>
-    <td>
-      <button>Edit</button>
-      <button>Delete</button>
-    </td>
-  </tbody>
-</table>
+<form action="">
+  <input type="text" placeholder="what do i need to do">
+  <button>Create</button>
+</form>
