handling edit button with saveEdit methods

--- a/src/mockup.html
+++ b/src/mockup.html
@@ -1,4 +1,3 @@
 <form action="">
-  <input type="text" placeholder="what do i need to do">
-  <button>Create</button>
+  <input type="text" defaultValue={task} ref="editInput"/>
 </form>
